--- a/src/context/ThemeProvider/ThemeSwitcher/ThemeSwitcher.scss
+++ b/src/context/ThemeProvider/ThemeSwitcher/ThemeSwitcher.scss
@@ -9,9 +9,6 @@ button.theme-switcher {
     outline: none;
     border-radius: 50%;
     padding: 0.35rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     cursor: pointer;
     transition: .2s;
     &:hover {
@@ -19,8 +16,9 @@ button.theme-switcher {
         background-color: var(--secondary);
     }
     .icon {
-        font-size: 1.15rem;
+        font-size: 1.18rem;
         line-height: 1;
+        vertical-align: middle;
     }
 }
   
