--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -14,3 +14,16 @@
         @media (max-width: $breakpoint) { @content; }
     }
 }
+
+@mixin glow-effect() {
+    &::after {
+        content: '';
+        position: absolute;
+        min-width: 80%;
+        height: 60%;
+        border-radius: 100%;
+        background-color: red;
+        z-index: -1;
+        box-shadow: 0px 0px 250px 10px var(--glow-effect);
+    }
+}
