--- a/src/components/Card/LeftIconCard/LeftIconCard.module.scss
+++ b/src/components/Card/LeftIconCard/LeftIconCard.module.scss
@@ -1,5 +1,4 @@
 @use 'src/sass/variables' as v;
-@use 'src/sass/mixins' as m;
 
 .card {
     padding: 1.5rem 1rem;
@@ -7,7 +6,7 @@
     justify-content: center;
     gap: 1.5rem;
     border-radius: v.$border-r-regular;
-    border: 1px solid #012812;
+    border: 1px solid var(--border-color);
     background-color: var(--bg-2);
 }
 
@@ -18,6 +17,7 @@
     background-color: var(--bg-3);
     color: var(--primary);
     line-height: 0;
+    align-self: self-start;
 }
 
 .textContent {
