Finito landing page

--- a/src/app/(root)/_sections/TestimonialsSection/TestimonialsSection.scss
+++ b/src/app/(root)/_sections/TestimonialsSection/TestimonialsSection.scss
@@ -10,5 +10,8 @@
         @include m.respond-to('tablet') {
             grid-template-columns: repeat(2, 1fr);
         }
+        @include m.respond-to(760px) {
+            grid-template-columns: 1fr;
+        }
     }
 }
