--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,3 +1,11 @@
+// Raleway
+@font-face {
+    font-family: 'Raleway';
+    src: url('../fonts/Raleway-ExtraLight.ttf') format('truetype');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
 @font-face {
     font-family: 'Raleway';
     src: url('../fonts/Raleway-Light.ttf') format('truetype');
@@ -26,6 +34,8 @@
     font-style: normal;
     font-display: swap;
 }
+
+// Istok for Logo
 @font-face {
     font-family: 'Istok_Web';
     src: url('../fonts/IstokWeb-Regular.ttf') format('truetype');
