--- a/src/sass/_class.scss
+++ b/src/sass/_class.scss
@@ -43,8 +43,8 @@ a.btn-1 {
         box-shadow: 0px 0px 10px 2px var(--primary);
     }
     &.loading {
-        // cursor: not-allowed;
-        // opacity: .2;
+        cursor: not-allowed;
+        opacity: .2;
     }
 }
 button.btn-2, 
