Risolto piccoli bug

--- a/src/app/(root)/solutions/_sections/GestionaleSection/GestionaleSection.scss
+++ b/src/app/(root)/solutions/_sections/GestionaleSection/GestionaleSection.scss
@@ -19,6 +19,7 @@
         .card {
             padding: .75rem;    
             min-width: 240px;
+            height: 100%;
             background-color: var(--bg-2);
             border: 1px solid var(--border-color);
             text-align: center;
