--- a/src/ui/TwoColumns/TwoColumns.scss
+++ b/src/ui/TwoColumns/TwoColumns.scss
@@ -15,15 +15,14 @@
     .side-content {
         aspect-ratio: 663 / 634;
         min-width: 350px;
-        .img {
-            position: relative;
+        @include m.glow-effect();
+        img {
             height: 100%;
             width: 100%;
             border-radius: v.$border-r-regular;
             display: flex;
             justify-content: center;
             align-items: center;
-            @include m.glow-effect();
         }
     }
     @include m.respond-to(1080px) {
