--- a/src/app/(root)/_sections/ServicesSection/ServicesSection.scss
+++ b/src/app/(root)/_sections/ServicesSection/ServicesSection.scss
@@ -1,4 +1,5 @@
 @use 'src/sass/variables' as v;
+@use 'src/sass/mixins' as m;
 
 .section--margin.services {
     position: relative;
@@ -12,5 +13,8 @@
         align-self: center;
         background: #0076BF;
         filter: blur(115px);
+        @include m.respond-to('tablet') {
+            display: none;
+        }
     }
 }
