Errore ortografia e design

--- a/src/components/Card/TestimonialCard/TestimonialCard.module.scss
+++ b/src/components/Card/TestimonialCard/TestimonialCard.module.scss
@@ -5,6 +5,7 @@
     background-color: var(--bg-2);
     border-radius: v.$border-r-regular;
     border: 1px solid var(--border-color);
+    height: 100%;
     .headerCard {
         display: flex;
         justify-content: space-between;
